# bsu-barovik

./: .gitignore  README.md  main.py  test.py  test_common_errors.py
lab1/: README.md  main.py  pyproject.toml  test.py  test_common_errors.py
lab2/: README.md  main.py  schema.sql
lab2/data/: business.db
lab2/database/: db_manager.py  seed_db.py
lab2/docs/: step_1.md
lab2/ui/: main_window.py  record_editor.py  table_view.py
