[tool.poetry]
name = "bsu-barovik"
version = "0.1.0"
description = ""
authors = ["ars <a.moguchii@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tk = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
